src/snapshots/bundle_cat__tests__logs_exec.snap
---
source: src/lib.rs
expression: "String::from_utf8_lossy(&exec_out)"
---
==> rack/34261901-b550-451c-9bd0-3926bb29c40d/sled/690650fd-4f95-4b3a-b2ec-977d47154383/logs/oxz_switch/dendrite/archive/oxide-dendrite:default.log.1758702600 <==
[1;39m{[0m
  [1;34m"msg"[0m[1;39m:[0m [0;32m"loopback entry fd69:644c:516f:ee88::1 already set"[0m[1;39m,[0m
  [1;34m"v"[0m[1;39m:[0m [0;39m0[0m[1;39m,[0m
  [1;34m"name"[0m[1;39m:[0m [0;32m"dpd"[0m[1;39m,[0m
  [1;34m"level"[0m[1;39m:[0m [0;39m20[0m[1;39m,[0m
  [1;34m"time"[0m[1;39m:[0m [0;32m"1986-12-26T07:30:02.0679829Z"[0m[1;39m,[0m
  [1;34m"hostname"[0m[1;39m:[0m [0;32m"oxz_switch"[0m[1;39m,[0m
  [1;34m"pid"[0m[1;39m:[0m [0;39m1717[0m
[1;39m}[0m
[1;39m{[0m
  [1;34m"msg"[0m[1;39m:[0m [0;32m"request completed"[0m[1;39m,[0m
  [1;34m"v"[0m[1;39m:[0m [0;39m0[0m[1;39m,[0m
  [1;34m"name"[0m[1;39m:[0m [0;32m"dpd"[0m[1;39m,[0m
  [1;34m"level"[0m[1;39m:[0m [0;39m30[0m[1;39m,[0m
  [1;34m"time"[0m[1;39m:[0m [0;32m"1986-12-28T07:30:02.068057082Z"[0m[1;39m,[0m
  [1;34m"hostname"[0m[1;39m:[0m [0;32m"oxz_switch"[0m[1;39m,[0m
  [1;34m"pid"[0m[1;39m:[0m [0;39m1717[0m[1;39m,[0m
  [1;34m"uri"[0m[1;39m:[0m [0;32m"/loopback/ipv6"[0m[1;39m,[0m
  [1;34m"method"[0m[1;39m:[0m [0;32m"POST"[0m[1;39m,[0m
  [1;34m"req_id"[0m[1;39m:[0m [0;32m"ce63fccd-fb9e-4a99-a3a8-5c1677740099"[0m[1;39m,[0m
  [1;34m"remote_addr"[0m[1;39m:[0m [0;32m"[::1]:60692"[0m[1;39m,[0m
  [1;34m"local_addr"[0m[1;39m:[0m [0;32m"[::1]:12224"[0m[1;39m,[0m
  [1;34m"server_id"[0m[1;39m:[0m [0;32m"2"[0m[1;39m,[0m
  [1;34m"unit"[0m[1;39m:[0m [0;32m"api-server"[0m[1;39m,[0m
  [1;34m"latency_us"[0m[1;39m:[0m [0;39m92[0m[1;39m,[0m
  [1;34m"response_code"[0m[1;39m:[0m [0;32m"204"[0m
[1;39m}[0m
[1;39m{[0m
  [1;34m"msg"[0m[1;39m:[0m [0;32m"request completed"[0m[1;39m,[0m
  [1;34m"v"[0m[1;39m:[0m [0;39m0[0m[1;39m,[0m
  [1;34m"name"[0m[1;39m:[0m [0;32m"dpd"[0m[1;39m,[0m
  [1;34m"level"[0m[1;39m:[0m [0;39m30[0m[1;39m,[0m
  [1;34m"time"[0m[1;39m:[0m [0;32m"1986-12-28T07:30:02.068201157Z"[0m[1;39m,[0m
  [1;34m"hostname"[0m[1;39m:[0m [0;32m"oxz_switch"[0m[1;39m,[0m
  [1;34m"pid"[0m[1;39m:[0m [0;39m1717[0m[1;39m,[0m
  [1;34m"uri"[0m[1;39m:[0m [0;32m"/route/ipv4/0.0.0.0%2F0"[0m[1;39m,[0m
  [1;34m"method"[0m[1;39m:[0m [0;32m"GET"[0m[1;39m,[0m
  [1;34m"req_id"[0m[1;39m:[0m [0;32m"af76ae57-5dbf-42c2-91c7-9a376a779188"[0m[1;39m,[0m
  [1;34m"remote_addr"[0m[1;39m:[0m [0;32m"[::1]:60692"[0m[1;39m,[0m
  [1;34m"local_addr"[0m[1;39m:[0m [0;32m"[::1]:12224"[0m[1;39m,[0m
  [1;34m"server_id"[0m[1;39m:[0m [0;32m"2"[0m[1;39m,[0m
  [1;34m"unit"[0m[1;39m:[0m [0;32m"api-server"[0m[1;39m,[0m
  [1;34m"latency_us"[0m[1;39m:[0m [0;39m49[0m[1;39m,[0m
  [1;34m"response_code"[0m[1;39m:[0m [0;32m"200"[0m
[1;39m}[0m
[1;39m{[0m
  [1;34m"msg"[0m[1;39m:[0m [0;32m"request completed"[0m[1;39m,[0m
  [1;34m"v"[0m[1;39m:[0m [0;39m0[0m[1;39m,[0m
  [1;34m"name"[0m[1;39m:[0m [0;32m"dpd"[0m[1;39m,[0m
  [1;34m"level"[0m[1;39m:[0m [0;39m30[0m[1;39m,[0m
  [1;34m"time"[0m[1;39m:[0m [0;32m"1986-12-28T07:30:02.068945446Z"[0m[1;39m,[0m
  [1;34m"hostname"[0m[1;39m:[0m [0;32m"oxz_switch"[0m[1;39m,[0m
  [1;34m"pid"[0m[1;39m:[0m [0;39m1717[0m[1;39m,[0m
  [1;34m"uri"[0m[1;39m:[0m [0;32m"/ports/qsfp0/links/0"[0m[1;39m,[0m
  [1;34m"method"[0m[1;39m:[0m [0;32m"GET"[0m[1;39m,[0m
  [1;34m"req_id"[0m[1;39m:[0m [0;32m"d3df6b3b-48e8-4ffb-ab03-1fe07c5e0126"[0m[1;39m,[0m
  [1;34m"remote_addr"[0m[1;39m:[0m [0;32m"[::1]:60692"[0m[1;39m,[0m
  [1;34m"local_addr"[0m[1;39m:[0m [0;32m"[::1]:12224"[0m[1;39m,[0m
  [1;34m"server_id"[0m[1;39m:[0m [0;32m"2"[0m[1;39m,[0m
  [1;34m"unit"[0m[1;39m:[0m [0;32m"api-server"[0m[1;39m,[0m
  [1;34m"latency_us"[0m[1;39m:[0m [0;39m78[0m[1;39m,[0m
  [1;34m"response_code"[0m[1;39m:[0m [0;32m"200"[0m
[1;39m}[0m

==> rack/34261901-b550-451c-9bd0-3926bb29c40d/sled/690650fd-4f95-4b3a-b2ec-977d47154383/logs/oxz_switch/dendrite/current/oxide-dendrite:default.log <==
[1;39m{[0m
  [1;34m"msg"[0m[1;39m:[0m [0;32m"loopback entry fd69:644c:516f:ee88::1 already set"[0m[1;39m,[0m
  [1;34m"v"[0m[1;39m:[0m [0;39m0[0m[1;39m,[0m
  [1;34m"name"[0m[1;39m:[0m [0;32m"dpd"[0m[1;39m,[0m
  [1;34m"level"[0m[1;39m:[0m [0;39m20[0m[1;39m,[0m
  [1;34m"time"[0m[1;39m:[0m [0;32m"1986-12-26T07:30:02.0679829Z"[0m[1;39m,[0m
  [1;34m"hostname"[0m[1;39m:[0m [0;32m"oxz_switch"[0m[1;39m,[0m
  [1;34m"pid"[0m[1;39m:[0m [0;39m1717[0m
[1;39m}[0m
[1;39m{[0m
  [1;34m"msg"[0m[1;39m:[0m [0;32m"request completed"[0m[1;39m,[0m
  [1;34m"v"[0m[1;39m:[0m [0;39m0[0m[1;39m,[0m
  [1;34m"name"[0m[1;39m:[0m [0;32m"dpd"[0m[1;39m,[0m
  [1;34m"level"[0m[1;39m:[0m [0;39m30[0m[1;39m,[0m
  [1;34m"time"[0m[1;39m:[0m [0;32m"1986-12-28T07:30:02.068057082Z"[0m[1;39m,[0m
  [1;34m"hostname"[0m[1;39m:[0m [0;32m"oxz_switch"[0m[1;39m,[0m
  [1;34m"pid"[0m[1;39m:[0m [0;39m1717[0m[1;39m,[0m
  [1;34m"uri"[0m[1;39m:[0m [0;32m"/loopback/ipv6"[0m[1;39m,[0m
  [1;34m"method"[0m[1;39m:[0m [0;32m"POST"[0m[1;39m,[0m
  [1;34m"req_id"[0m[1;39m:[0m [0;32m"ce63fccd-fb9e-4a99-a3a8-5c1677740099"[0m[1;39m,[0m
  [1;34m"remote_addr"[0m[1;39m:[0m [0;32m"[::1]:60692"[0m[1;39m,[0m
  [1;34m"local_addr"[0m[1;39m:[0m [0;32m"[::1]:12224"[0m[1;39m,[0m
  [1;34m"server_id"[0m[1;39m:[0m [0;32m"2"[0m[1;39m,[0m
  [1;34m"unit"[0m[1;39m:[0m [0;32m"api-server"[0m[1;39m,[0m
  [1;34m"latency_us"[0m[1;39m:[0m [0;39m92[0m[1;39m,[0m
  [1;34m"response_code"[0m[1;39m:[0m [0;32m"204"[0m
[1;39m}[0m
[1;39m{[0m
  [1;34m"msg"[0m[1;39m:[0m [0;32m"request completed"[0m[1;39m,[0m
  [1;34m"v"[0m[1;39m:[0m [0;39m0[0m[1;39m,[0m
  [1;34m"name"[0m[1;39m:[0m [0;32m"dpd"[0m[1;39m,[0m
  [1;34m"level"[0m[1;39m:[0m [0;39m30[0m[1;39m,[0m
  [1;34m"time"[0m[1;39m:[0m [0;32m"1986-12-28T07:30:02.068201157Z"[0m[1;39m,[0m
  [1;34m"hostname"[0m[1;39m:[0m [0;32m"oxz_switch"[0m[1;39m,[0m
  [1;34m"pid"[0m[1;39m:[0m [0;39m1717[0m[1;39m,[0m
  [1;34m"uri"[0m[1;39m:[0m [0;32m"/route/ipv4/0.0.0.0%2F0"[0m[1;39m,[0m
  [1;34m"method"[0m[1;39m:[0m [0;32m"GET"[0m[1;39m,[0m
  [1;34m"req_id"[0m[1;39m:[0m [0;32m"af76ae57-5dbf-42c2-91c7-9a376a779188"[0m[1;39m,[0m
  [1;34m"remote_addr"[0m[1;39m:[0m [0;32m"[::1]:60692"[0m[1;39m,[0m
  [1;34m"local_addr"[0m[1;39m:[0m [0;32m"[::1]:12224"[0m[1;39m,[0m
  [1;34m"server_id"[0m[1;39m:[0m [0;32m"2"[0m[1;39m,[0m
  [1;34m"unit"[0m[1;39m:[0m [0;32m"api-server"[0m[1;39m,[0m
  [1;34m"latency_us"[0m[1;39m:[0m [0;39m49[0m[1;39m,[0m
  [1;34m"response_code"[0m[1;39m:[0m [0;32m"200"[0m
[1;39m}[0m
[1;39m{[0m
  [1;34m"msg"[0m[1;39m:[0m [0;32m"request completed"[0m[1;39m,[0m
  [1;34m"v"[0m[1;39m:[0m [0;39m0[0m[1;39m,[0m
  [1;34m"name"[0m[1;39m:[0m [0;32m"dpd"[0m[1;39m,[0m
  [1;34m"level"[0m[1;39m:[0m [0;39m30[0m[1;39m,[0m
  [1;34m"time"[0m[1;39m:[0m [0;32m"1986-12-28T07:30:02.068945446Z"[0m[1;39m,[0m
  [1;34m"hostname"[0m[1;39m:[0m [0;32m"oxz_switch"[0m[1;39m,[0m
  [1;34m"pid"[0m[1;39m:[0m [0;39m1717[0m[1;39m,[0m
  [1;34m"uri"[0m[1;39m:[0m [0;32m"/ports/qsfp0/links/0"[0m[1;39m,[0m
  [1;34m"method"[0m[1;39m:[0m [0;32m"GET"[0m[1;39m,[0m
  [1;34m"req_id"[0m[1;39m:[0m [0;32m"d3df6b3b-48e8-4ffb-ab03-1fe07c5e0126"[0m[1;39m,[0m
  [1;34m"remote_addr"[0m[1;39m:[0m [0;32m"[::1]:60692"[0m[1;39m,[0m
  [1;34m"local_addr"[0m[1;39m:[0m [0;32m"[::1]:12224"[0m[1;39m,[0m
  [1;34m"server_id"[0m[1;39m:[0m [0;32m"2"[0m[1;39m,[0m
  [1;34m"unit"[0m[1;39m:[0m [0;32m"api-server"[0m[1;39m,[0m
  [1;34m"latency_us"[0m[1;39m:[0m [0;39m78[0m[1;39m,[0m
  [1;34m"response_code"[0m[1;39m:[0m [0;32m"200"[0m
[1;39m}[0m
